@@ -1,4 +1,4 @@
-# Automatically generated by php-weathermap v0.97c
+# Automatically generated by php-weathermap v0.98
 
 FONTDEFINE 100 docs/example/Vera.ttf 10
 
@@ -10,7 +10,7 @@ KEYFONT 100
 TITLE test
 TIMEPOS 746 17 Created: %b %d %Y %H:%M:%S
 
-KEYPOS DEFAULT 10 11 Traffic Load
+KEYPOS DEFAULT 29 27 Traffic Load
 KEYTEXTCOLOR 0 0 0
 KEYOUTLINECOLOR 0 0 0
 KEYBGCOLOR 255 255 255
@@ -51,12 +51,12 @@ LINK DEFAULT
 NODE node1
 	LABEL Node 1
 	ICON 128 128 images/hollow32.png
-	POSITION 800 250
+	POSITION 669 344
 
 NODE node2
 	LABEL Node 2
 	ICON 128 128 images/hollow32.png
-	POSITION 150 500
+	POSITION 172 446
 
 NODE node3
 	LABEL Node 3
@@ -69,9 +69,8 @@ LINK node1-node2
 	VIASTYLE angled
 	TARGET static:10M:20M
 	NODES node1 node2
-	VIA 150 250
+	VIA 188 202
 	SET _tidied 1
-
 
 LINK node2-node3
 	NODES node2:44:-64 node3:-44:64
